Regression: Eyedropper on Colour Ramp flag crash to desktop #120302

Closed
opened 2024-04-05 14:44:29 +02:00 by Erindale · 4 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-23 23:00, hash: 06d3627c4398
Worked: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-09 09:37, hash: e20b2d2fb947

caused by c5d855b497

Short description of error
When hovering cursor over a colour ramp flag in both geo nodes and shaders and pressing E (for eyedropper) blender will crash to desktop

Exact steps for others to reproduce the error
Happens even in a completely new file with just a disconnected color ramp node.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-23 23:00, hash: `06d3627c4398` Worked: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-09 09:37, hash: `e20b2d2fb947` caused by c5d855b497fdacaa7f38f630c3d10e9e65e4f27e **Short description of error** When hovering cursor over a colour ramp flag in both geo nodes and shaders and pressing E (for eyedropper) blender will crash to desktop **Exact steps for others to reproduce the error** Happens even in a completely new file with just a disconnected color ramp node.
Erindale added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-05 14:44:30 +02:00
Iliya Katushenock added the
Interest
User Interface
label 2024-04-05 14:46:49 +02:00
Iliya Katushenock changed title from Eyedropper on Colour Ramp flag crash to desktop to Regression: Eyedropper on Colour Ramp flag crash to desktop 2024-04-05 15:06:57 +02:00
Iliya Katushenock added this to the 4.2 LTS milestone 2024-04-05 15:15:12 +02:00

Not sure if this feature was correct before, but now its crash.

Not sure if this feature was correct before, but now its crash.
Member

I can make it not crash, but I'm a bit confused about the "flag" part of "hovering cursor over a colour ramp flag".

What I mean is that there doesn't appear to be functionality for hovering over a "color stop" (house-shaped thing), pressing "E" to change that stop's color. It appears to treat hovering over any part of the ramp the same, not treating the stops differently.

So pressing "E" is no different from selecting "Eyedropper" from the "˅" menu. With that though you can basically get two things. You can click on a single color and you will then have a ramp containing only a single color stop with that color. Or you can drag over a range of colors and it will replace your existing ramp with a new one containing multiple stops for the colors in the range that you dragged over.

So I can fix this so that it doesn't crash and you get the intended behavior, but it might not be the behavior you are expecting.

I can make it not crash, but I'm a bit confused about the "flag" part of "hovering cursor over a colour ramp flag". What I mean is that there doesn't appear to be functionality for hovering over a "color stop" (house-shaped thing), pressing "E" to change that stop's color. It appears to treat hovering over any part of the ramp the same, not treating the stops differently. So pressing "E" is no different from selecting "Eyedropper" from the "˅" menu. With that though you can basically get two things. You can click on a single color and you will then have a ramp containing only a single color stop with that color. Or you can drag over a range of colors and it will replace your existing ramp with a new one containing multiple stops for the colors in the range that you dragged over. So I can fix this so that it doesn't crash and you get the intended behavior, but it might not be the behavior you are expecting.
Member

caused by c5d855b497 eyedropper_colorband_init wasn't updated for the change from UI_but_funcN_set to UI_but_func_set in colorband_buttons_layout so it's now null dereffing but->func_argN

caused by c5d855b497fdacaa7f38f630c3d10e9e65e4f27e `eyedropper_colorband_init` wasn't updated for the change from `UI_but_funcN_set` to `UI_but_func_set` in `colorband_buttons_layout` so it's now null dereffing `but->func_argN`
Member

caused by c5d855b497 eyedropper_colorband_init wasn't updated for the change from UI_but_funcN_set to UI_but_func_set in colorband_buttons_layout so it's now null dereffing but->func_argN

CC @HooglyBoogly

> caused by c5d855b497fdacaa7f38f630c3d10e9e65e4f27e `eyedropper_colorband_init` wasn't updated for the change from `UI_but_funcN_set` to `UI_but_func_set` in `colorband_buttons_layout` so it's now null dereffing `but->func_argN` CC @HooglyBoogly
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-17 18:53:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120302
No description provided.