Fix #120302: Crash Using Eyedropper on Color Ramp

Fix crash when using hotkey to open eyedropper over a color ramp. This
is accessing data that is never assigned and therefore always null.